tests/NormalTests/paczka1/small_fuzzy/95407648.err
Error in line 3: WwbhX9RQ A867 67,8
Error in line 2: mf24WQ9HjWN A660 3,5
Error in line 13: E07 A660 75,0
